[project]
name = "mcp-server-weather"
version = "0.1.0"
description = "A weather server that provides real-time weather information for a specified city by integrating with the QWeather API."
authors = [
    { name = "panger", email = "panger@example.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.0",
]
